# tiec_build_api

./: .gitignore  API文档.md  Cargo.toml  README.md  build.rs  test.json  代码深度解析.md  编译命令说明.txt  项目修改记录.md  项目完整文档.md
.cargo/: config.toml
.github/workflows/: rust-ci-cross-compile.yml
src/: assets.rs  config.rs  database.rs  error.rs  main.rs  middleware.rs  state.rs  utils.rs
src/api/: build.rs  cleanup.rs  download.rs  health.rs  mod.rs  upload.rs
src/models/: mod.rs  task.rs
src/stdlib/android/: .gitignore
src/stdlib/windows/: libdev_api.h
src/tiecc/linux_arm64-v8a/: tiec
src/tiecc/linux_x86_64/: tiec
src/worker/: mod.rs
